--- a/page-depth-02/S03.html
+++ b/page-depth-02/S03.html
@@ -71,19 +71,17 @@
                 </p>
             </tr>
             <tr>
-                <td>
-                    <!-- <p>  -->
+                <!-- <td>
                     <a href="../Forms\Scheduler-S03 (Responses).xlsx" target="_blank" class="cell-link">
                         See Schedule
                     </a>
-                    <!-- </p> -->
-                </td>
+                </td> -->
 
 
                 <td>
                     <!-- <p>  -->
-                    <a href="../Forms\S03-form.pdf" target="_blank" class="cell-link">
-                        Add Schedule
+                    <a href="../Forms/form_with_full_page_results.html" class="cell-link">
+                        Browse Schedule
                     </a>
                     <!-- </p> -->
                 </td>
