--- a/page-depth-02/S05.html
+++ b/page-depth-02/S05.html
@@ -33,17 +33,17 @@
   <!-- TOP BAR -->
 
   <!-- Navigation Bar -->
-   <nav class="navbar">
-        <div class="nav-container">
-            <ul class="nav-links">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../Semesters.html">Semesters</a></li>
-                <li><a href="../Events.html">Events</a></li>
-                <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li>
-                <!-- <li><a href="contact.html">Contact</a></li> -->
-            </ul>
-        </div>
-    </nav>
+  <nav class="navbar">
+    <div class="nav-container">
+      <ul class="nav-links">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../Semesters.html">Semesters</a></li>
+        <li><a href="../Events.html">Events</a></li>
+        <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li>
+        <!-- <li><a href="contact.html">Contact</a></li> -->
+      </ul>
+    </div>
+  </nav>
 
   <div class="logo-container">
     <div class="logo">
@@ -51,15 +51,15 @@
     </div>
     <div class="logo-text"></div>
   </div>
-<!-- BOTTOM BAR "navbar" -->
+  <!-- BOTTOM BAR "navbar" -->
 
 
-    <div class="navbar-5">
-        <font size="24"></font>
-        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Scheduler</i></p>
-        </font>
+  <div class="navbar-5">
+    <font size="24"></font>
+    <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Scheduler</i></p>
+    </font>
 
-    </div>
+  </div>
   <!-- ----------------------------------------------------------------------- -->
 
 
@@ -71,20 +71,18 @@
         </p>
       </tr>
       <tr>
-        <td>
-          <!-- <p>  -->
+        <!-- <td>
           <a href="https://docs.google.com/spreadsheets/d/1bNqLGnPw4KIgFCE2eW2RFCDeJXgE9E3NzCaDrzZjYzM/edit?usp=sharing"
             target="_blank" class="cell-link">
             See Schedule
           </a>
-          <!-- </p> -->
-        </td>
+        </td> -->
 
 
         <td>
           <!-- <p>  -->
-          <a href="https://forms.gle/Ny1x8PKS3zR1KTKT9" target="_blank" class="cell-link">
-            Add Schedule
+          <a href="../Forms/form_with_full_page_results.html" class="cell-link">
+            Browse Schedule
           </a>
           <!-- </p> -->
         </td>
