--- a/page-depth-02/S02.html
+++ b/page-depth-02/S02.html
@@ -52,7 +52,7 @@
         </div>
         <div class="logo-text"></div>
     </div>
-<!-- BOTTOM BAR "navbar" -->
+    <!-- BOTTOM BAR "navbar" -->
 
 
     <div class="navbar-5">
@@ -72,20 +72,18 @@
                 </p>
             </tr>
             <tr>
-                <td>
-                    <!-- <p>  -->
+                <!-- <td>
                     <a href="https://docs.google.com/spreadsheets/d/1-Z4UkYteUF5V4_8wTaVaZvDmULh_LFsVZm-98ul7wbY/edit?usp=sharing"
                         target="_blank" class="cell-link">
                         See Schedule
                     </a>
-                    <!-- </p> -->
-                </td>
+                </td> -->
 
 
                 <td>
                     <!-- <p>  -->
-                    <a href="https://forms.gle/31QcKSVwpCQM57yo6" target="_blank" class="cell-link">
-                        Add Schedule
+                    <a href="../Forms/form_with_full_page_results.html" class="cell-link">
+                        Browse Schedule
                     </a>
                     <!-- </p> -->
                 </td>
