--- a/page-depth-02/S06.html
+++ b/page-depth-02/S06.html
@@ -70,20 +70,18 @@
         </p>
       </tr>
       <tr>
-        <td>
-          <!-- <p>  -->
+        <!-- <td>
           <a href="https://docs.google.com/spreadsheets/d/13DbXt7Ps97Te76RDC9YxZnGHJj7EUYr5xltsUuhzB7E/edit?usp=sharing"
             target="_blank" class="cell-link">
             See Schedule
           </a>
-          <!-- </p> -->
-        </td>
+        </td> -->
 
 
         <td>
           <!-- <p>  -->
-          <a href="https://forms.gle/kp4ePqNYEVgB6EM27" target="_blank" class="cell-link">
-            Add Schedule
+          <a href="../Forms/form_with_full_page_results.html" class="cell-link">
+            Browse Schedule
           </a>
           <!-- </p> -->
         </td>
