--- a/page-depth-02/S01.html
+++ b/page-depth-02/S01.html
@@ -75,20 +75,16 @@
                 </p>
             </tr>
             <tr>
-                <td>
-                    <!-- <p>  -->
+                <!-- <td>
                     <a href="https://docs.google.com/spreadsheets/d/1guRS7HFQDVCGwHsT7St4_FReIPT8SXS8GTFgjEDcs9Y/edit?usp=sharing"
                         target="_blank" class="cell-link">
                         See Schedule
                     </a>
-                    <!-- </p> -->
-                </td>
-
-
+                </td> -->
                 <td>
                     <!-- <p>  -->
                     <a href="../Forms/form_with_full_page_results.html" class="cell-link">
-                        Add Schedule
+                        Browse Schedule
                     </a>
                     <!-- </p> -->
                 </td>
