--- a/Forms/form_with_full_page_results.html
+++ b/Forms/form_with_full_page_results.html
@@ -349,7 +349,7 @@
 
     <div class="results-container" id="resultsContainer">
         <div class="results-header">
-            <h1>Form Submission Results</h1>
+            <!-- <h1>Form Submission Results</h1> -->
             <div class="button-group">
                 <button class="clear-btn" id="clearButton">Clear Data</button>
                 <button class="back-btn" id="backButton">Back to Form</button>
@@ -357,7 +357,7 @@
         </div>
 
         <div class="results-content" id="resultsContent">
-            <div class="table-header">Form Submission Data</div>
+            <div class="table-header">Current Schedules</div>
             <table class="datasheet-table" id="datasheetTable">
                 <thead>
                     <tr id="tableHeader">
