--- a/Forms/form_with_full_page_results.html
+++ b/Forms/form_with_full_page_results.html
@@ -272,13 +272,13 @@
         <a href="javascript:history.back()" class="back-icon" style="box-sizing:content-box;">&#8592;</a>
 
 
-        <h1>Contact Information</h1>
+        <h1>Student Schedules</h1>
         <form id="contactForm">
 
             <div class="form-group">
                 <label for="section">Section ?</label>
                 <select id="section" name="section" required>
-                    <option value="">-- Select a Subject --</option>
+                    <option value="">-- Select a Section --</option>
                     <option value="all">All Section</option>
                     <option value="A">Section A</option>
                     <option value="B">Section B</option>
@@ -289,7 +289,7 @@
             <div class="form-group">
                 <label for="group">Group ?</label>
                 <select id="group" name="group">
-                    <option value="">-- Select a Subject --</option>
+                    <option value="">-- Select a Group --</option>
                     <option value="A1">A1</option>
                     <option value="A2">A2</option>
                     <option value="B1">B1</option>
@@ -299,9 +299,9 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="type">Group ?</label>
+                <label for="type">Type ?</label>
                 <select id="type" name="type" required>
-                    <option value="">-- Select a Subject --</option>
+                    <option value="">-- Select a Type --</option>
                     <option value="notice">Notice</option>
                     <option value="assignment">Assignment</option>
                     <option value="labtest">Lab Test</option>
@@ -324,7 +324,7 @@
             <div class="form-group">
                 <label for="course">Course ?</label>
                 <select id="course" name="course" required>
-                    <option value="">-- Select a Subject --</option>
+                    <option value="">-- Select a Course --</option>
                     <option value="course-1">Demo Course 1</option>
                     <option value="course-2">Demo Course 2</option>
                     <option value="course-3">Demo Course 3</option>
